@@ -47,6 +47,23 @@ co.elastic.metrics/raw: "[{\"enabled\":true,\"metricsets\":[\"default\"],\"modul
 -------------------------------------------------------------------------------------
 
 [float]
+===== `co.elastic.metrics/processors`
+
+Define a processor to be added to the {beatname_uc} module configuration. See <<filtering-and-enhancing-data>> for the list
+of supported processors.
+
+In order to provide ordering of the processor definition, numbers can be provided. If not, the hints builder will do
+arbitrary ordering:
+
+["source","yaml",subs="attributes"]
+-------------------------------------------------------------------------------------
+co.elastic.logs/processors.1.add_locale.abbrevation: "MST"
+co.elastic.logs/processors.add_locale.abbrevation: "PST"
+-------------------------------------------------------------------------------------
+
+In the above sample the processor definition tagged with `1` would be executed first.
+
+[float]
 === Kubernetes
 
 Kubernetes autodiscover provider supports hints in Pod annotations. To enable it just set `hints.enabled`:
